
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "navi"
version = "1.0.8"
readme = "README.md"

description = "App Launcher and Navigator TUI for Hyprland"
requires-python = ">=3.8"

keywords = ["app launcher"]

classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only"
]

[[project.authors]]
name = "Jan T. Müller"
email = "mail@jantmueller.com"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/janthmueller/navi"
documentation = "https://janthmueller.github.io/navi/"
source = "https://github.com/janthmueller/navi"
tracker = "https://github.com/janthmueller/navi/issues"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.scripts]
navi = "navi:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
branch = "main"  
upload_to_repository = true
upload_to_release = true
build_command = "python -m build"
